# SuperCFG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  format_template_inst.py  get_compilation_time.py  shift_reduce_parser_notes.txt
cfg/: base.h  common.h  containers.h  context.h  follow.h  gbnf.cpp  gbnf.h  hashtable.h  helpers.h  helpers_runtime.h  parser.cpp  parser.h  preprocess.h  preprocess_factories.h  str.h  tgrammar.cpp  tgrammar.h  tokenizer.cpp  tokenizer.h
docs/: CONFIGURATION.md  DEBUGGER.md  EXAMPLES.md  README.md  USAGE.md
elemtree/: element.cpp  element.h
examples/: CMakeLists.txt  calc.cpp  json.cpp  lsystem.cpp
extra/: ast_serializer.h  clang_formatter.h  dbg.cpp  prettyprint.h  superdbg.h
genetic/: lsystem.ipynb  lsystem_analysis.py  lsystems.json  lsystems_small.json  run_lsystems.sh
genetic/superggd/: __init__.py  __main__.py  base.py  cling.py  operators.py  parser.py
genetic/superggd/examples/lsystem/: __init__.py  lsystem.py
genetic/superggd/parsers/: __init__.py  bison.py  supercfg.py
preprint/: README.md
tests/: bnf.h  main.cpp  ui.cpp
